feat(domain-utils): Java 8 compatibility