@@ -30,6 +30,6 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public final class StringUtils {
     public static boolean isBlank(String text) {
-        return text == null || text.isBlank();
+        return text == null || text.trim().isEmpty();
     }
 }
